fixing some homepage spacing

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -23,7 +23,8 @@
 	font-size: 1.75rem;
 }
 
-.Nav-links a {
+.Nav-links a,
+.Nav-logo a {
 	text-decoration: none;
 	color: #fff;
 }
@@ -38,14 +39,16 @@
 		width: 100vw;
 		height: 56px;
 		padding: 0 1rem;
+		justify-content: flex-start;
 	}
 
 	.Nav-logo {
 		font-size: 2rem;
+		width: 30%;
 	}
 
 	.Nav-links {
-		width: 50%;
+		width: 70%;
 		justify-content: space-around;
 	}
 }
