--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -30,9 +30,6 @@
 	grid-template-rows: 68px 45vh 60px 45vh 65px;
 } */
 
-
-
-
 /* ********************************************************************
   ##Device = Most of the Smartphones Mobiles (Portrait)
   ##Screen = B/w 320px to 479px
@@ -150,13 +147,13 @@
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 /* @media only screen and (min-width: 1200px) { */
 
-
 .Home {
-	height: 100%;
+	min-height: 100vh;
+	height: 100vh;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
 	overflow-x: hidden;
 }
 
@@ -220,7 +217,6 @@
 	background-color: #d97d54;
 	font-family: 'Roboto', sans-serif;
 	font-size: 1.35rem;
-
 }
 
 .Mid-nav-items {
@@ -234,7 +230,7 @@
 
 .Home-info-container {
 	width: 100vw;
-	height: 240px;
+	height: 30rem;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
@@ -244,7 +240,7 @@
 }
 
 .Home-info {
-	width: 60%;
+	width: 55%;
 	margin: 0 4rem;
 	height: 100%;
 	padding: 1rem 0;
@@ -255,7 +251,7 @@
 }
 
 .Home-info p {
-	padding: 1rem 0;
+	padding: 1rem 2rem;
 	font-size: 1.5rem;
 }
 
